added level 3 & improved responsiveness

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
         <div class="wrapper">
             <div class="main-container">
-                <div id="quiz-1" class="quiz-1-container unlock level-btn" data-bs-toggle="modal" data-bs-target="#quiz-modal">
+                <div id="quiz-1" class="flex-item quiz-1-container unlock level-btn" data-bs-toggle="modal" data-bs-target="#quiz-modal">
                     <div class="quiz-desc-container">
                         <i id="quiz-1-icon" class="fas fa-play quiz-icon"></i>
                         <div class="quiz-info">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <div id="quiz-2" class="quiz-2-container lock lock-2-tippy level-btn" data-bs-toggle="modal" data-bs-target="#quiz-modal">
+                <div id="quiz-2" class="flex-item quiz-2-container lock lock-2-tippy level-btn" data-bs-toggle="modal" data-bs-target="#quiz-modal">
                     <div class="quiz-desc-container">
                         <i id="quiz-2-icon" class="fas fa-lock quiz-icon"></i>
                         <div class="quiz-info">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 
-                <div id="quiz-3" class="quiz-3-container lock lock-3-tippy level-btn" data-bs-toggle="modal" data-bs-target="#quiz-modal">
+                <div id="quiz-3" class="flex-item quiz-3-container lock lock-3-tippy level-btn" data-bs-toggle="modal" data-bs-target="#quiz-modal">
                     <div class="quiz-desc-container">
                         <i id="quiz-3-icon" class="fas fa-lock quiz-icon"></i>
                         <div class="quiz-info">
@@ -105,7 +105,6 @@
             </div>
         </div>
     </div>
-
     <!-- Quiz Section -->
     <div class="modal" id="quiz-modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog modal-fullscreen">
